--- a/core/template_engine/templates/init/conduit.yaml.tmpl
+++ b/core/template_engine/templates/init/conduit.yaml.tmpl
@@ -1,11 +1,10 @@
-name: {{.ModuleName}}
+app_name: {{.ModuleName}}
 
-config:
-  server:
-    host: "localhost"
-    port: 8080
-  codegen:
-    go:
-      output: "./.conduit/go"
-    typescript:
-      output: "./.conduit/ts"
+server:
+  host: "localhost"
+  port: 8080
+codegen:
+  go:
+    output: "./.conduit/go"
+  typescript:
+    output: "./.conduit/ts"
